# dankerchat

./: .coverage  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEVELOPER-ONBOARDING.md  MIGRATION-NOTICE.md  README.md  backup-requirements.txt  cleanup-report.md  environment-snapshot.txt  migration-checklist.md  performance-benchmarks.md  pyproject.toml  rollback-test-report.md  uv-troubleshooting.md
.github/workflows/: ci-uv.yml  test-ci-uv.yml
backend/src/: __init__.py  app.py  database.py  fix_models.py  fix_sqlite_uuids.py
backend/src/api/: admin.py  auth.py  channels.py  messages.py  users.py
backend/src/migrations/: __init__.py  init_db.py
backend/src/models/: __init__.py  channel.py  channel_membership.py  direct_conversation.py  message.py  role.py  session.py  user.py
backend/src/services/: admin.py  auth.py  channels.py  messaging.py  users.py
backend/tests/: conftest.py
backend/tests/contract/: test_auth_login.py  test_auth_register.py  test_channel_messages.py  test_channels_get.py  test_channels_post.py  test_conversations_get.py  test_direct_messages.py  test_users_me.py  test_websocket_join.py  test_websocket_message.py  test_websocket_receive.py  test_websocket_typing.py
backend/tests/integration/: test_auth_flow.py  test_channel_messaging.py  test_direct_messaging.py  test_multi_client.py  test_realtime_messaging.py  test_user_registration.py
frontend/: .eslintrc.json  package.json  vite.config.ts
frontend/public/: index.html
frontend/src/: App.tsx
scripts/: dev-commands.sh  env-setup.sh  uv-helpers.sh
scripts-backup/: README.md
specs/001-chat-application/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-chat-application/contracts/: rest-api.yml  websocket-events.yml
specs/002-uv-migration/: migration-guide.md  plan.md  quickstart.md  research.md  rollback-guide.md  spec.md  tasks.md
src/dankerchat/: __init__.py
tests/: test_dependency_installation.py  test_pyproject_creation.py  test_uv_commands.py  test_uv_installation.py  test_virtual_environment.py
tests/migration/: test_cross_platform.py  test_dependency_sync.py  test_pyproject_config.py  test_uv_install.py
